wieniec od seby

--- a/_posts/2023-12-09-231209.md
+++ b/_posts/2023-12-09-231209.md
@@ -1,25 +1,39 @@
-# Przygotowanie kartek świątecznych
+# Wieniec adwentowy domowej roboty
 
-Dzisiejsze zadanie, to wykonanie kartek świątecznych dla najbliższych, rodziny, przyjaciół, znajomych. Ale halo, halo, czy ktoś jeszcze wysyła takie kartki? Czy nasze dzieci wiedzą, jak adresuje się kopertę/kartkę pocztową?
+Jeśli jeszcze nie zrobiliście [wieńca adwentowego](/wieniec/) to zapraszamy aby go zrobić już dzisiaj rodzinnie i jutro, w drugą niedzielę adwentu go oficjalnie zadebiutować!
 
-Cóż, odpowiedzi mogą być różne, ale uwaga – nasze kartki świąteczne nie muszą zostać koniecznie wysłane pocztą. Takie kartki wypełnione serdecznymi życzeniami, można oczywiście tradycyjnie wysłać pocztą, ale dobrym pomysłem może być również wręczenie ich podczas świąt. Kto wie, może warto zanieść taką kartkę sąsiadom?
+Sebastian z naszej wspólnoty zaobserwował:
 
-![Zdjęcie](/img/2021-12-04.jpg)
+> W naszym domu rozpoczęła się tradycyjna wojenka postu z karnawałem. Żona mądrze argumentuje, że od zarania dziejów na polskich ziemiach grudzień był początkiem okresu śmierci – najkrótsze dni, szalejące mrozy, kończące się zapasy żywności. Swoim zwyczajem przytacza badania naukowe, zgodnie z którymi „ludzie, którzy wcześniej zaczynają stroić mieszkania i ubierać choinki na święta są szczęśliwsi.”.
 
-## Grunt to własnoręcznie zrobiona kartka!
+![](/img/strojenie.jpg)
 
-Wykonana własnoręcznie kartka z odręcznie wypisanymi życzeniami, to dziś, w świecie smsów i różnych social mediów, prawdziwy rarytas. Zapraszamy Was do rodzinnego wykonania takich kartek. Warto najpierw przygotować listę osób, które chcecie takim prezentem obdarować a następnie przygotować kartki.
+Jednak adwent to czas oczekiwania na narodzenie Jezusa Chrystusa. Dość mamy w sklepach blichtru, reniferków, pingwinków i czerwonych grubasków, którzy odwracają uwagę od istoty Świąt Bożego Narodzenia. 
 
-## Inspiracje na kartki świąteczne
+To nie jest łatwe. Cały świat nam krzyczy, że *"last christmas aj gejw ju maj hart”*, a na placu św. Piotra w Rzymie udekorowana choinka stanęła ponad tydzień przed pierwszą niedzielą adwentu. Dla wielu z naszej wspólnoty jest to jednak szczególnie istotne, żeby przekazywać dzieciom nasze chrześcijańskie tradycje. Dla tych co ubiorą choinkę w Wigilię, do tego czasu mrok będzie rozświetlać światełko w wieńcu adwentowym.
 
-Poniżej zamieściliśmy filmiki z wieloma kartkowymi inspiracjami, mogą się przydać!
+## Przygotowanie do wykonania wieńca adwentowego
 
-{% include video.html id="Oz9m8sKCNsU" %}
+![](/img/wieniec-start.jpg)
 
-{% include video.html id="68Eli0AC9Lk" %}
+Rodzina Sebastiana ostatecznie wykonała wieniec dopiero w pierwszą niedzielę adwentu. Jeśli w Waszych domach jeszcze go nie ma, to nie przejmujcie się i łapcie inspirację obrazkową. Do wykonania wieńca użyliśmy następujących materiałów i narzędzi:
 
-{% include video.html id="8XEt1YPhiIw" %}
+- Wkrętarka
+- Palnik do podgrzania wkrętów, żeby świece nie pękły przy nasuwaniu
+- Pistolet do kleju na gorąco (nie załapał się na zdjęcia)
+- Plaster 
+- 4 wkręty do drewna
+- 4 świece
 
-## Materiały
+![](/img/wieniec-mid.jpg)
 
-Kolorowe kartki (najlepiej z bloku technicznego, format A5 lub A4), bibuła, cekiny, kredki, farby, pędzle, flamastry, klej.
+## Do dekoracji wieńca adwentowego wystarczy:
+
+- Czerwona wstążka
+- Wysuszone plastry pomarańczy
+- Orzechy
+- Gałązki cisu (bez nasionek – pamiętajmy, że te są trujące dla ludzi i zwierząt domowych!)
+
+Lub co tylko Wam przyjdzie do głowy! Oto efekt końcowy wieńca u Sebastiana:
+
+![](/img/wieniec-gotowy.jpg)
