--- a/_posts/2023-12-19-231219.md
+++ b/_posts/2023-12-19-231219.md
@@ -1,17 +1,25 @@
-# Robimy Gwiazdę Betlejemską
+# Przygotowanie kartek świątecznych
 
-Jednym z najważniejszych symboli adwentowych jest Gwiazda Betlejemska. To ona przecież wskazywała drogę do Betlejem.
+Dzisiejsze zadanie, to wykonanie kartek świątecznych dla najbliższych, rodziny, przyjaciół, znajomych. Ale halo, halo, czy ktoś jeszcze wysyła takie kartki? Czy nasze dzieci wiedzą, jak adresuje się kopertę/kartkę pocztową?
 
-Dlatego dziś zachęcamy Was do wykonania jej własnoręcznie, by i w Waszym domu pojawił się znak, że jesteśmy coraz bliżej celu.
+Cóż, odpowiedzi mogą być różne, ale uwaga – nasze kartki świąteczne nie muszą zostać koniecznie wysłane pocztą. Takie kartki wypełnione serdecznymi życzeniami, można oczywiście tradycyjnie wysłać pocztą, ale dobrym pomysłem może być również wręczenie ich podczas świąt. Kto wie, może warto zanieść taką kartkę sąsiadom?
 
-Możecie zrobić kilka mniejszych i ozdobić nimi choinkę lub powiesić w różnych miejscach, ale możecie też zdecydować się na Dużą Gwiazdę, która zawiśnie na czubku Waszej choinki lub innym widocznym miejscu.
- 
-![Gwiazda](/img/2021-12-20.jpg)
+![Zdjęcie](/img/2021-12-04.jpg)
 
-## Instrukcja filmowa
+## Grunt to własnoręcznie zrobiona kartka!
 
-{% include video.html id="NmgMe2tNVyo" %}
+Wykonana własnoręcznie kartka z odręcznie wypisanymi życzeniami, to dziś, w świecie smsów i różnych social mediów, prawdziwy rarytas. Zapraszamy Was do rodzinnego wykonania takich kartek. Warto najpierw przygotować listę osób, które chcecie takim prezentem obdarować a następnie przygotować kartki.
 
-## Co przygotować?
+## Inspiracje na kartki świąteczne
 
-2 kartki A4 (lub większe) - wybierzcie kolor w jakim ma być gwiazda.
+Poniżej zamieściliśmy filmiki z wieloma kartkowymi inspiracjami, mogą się przydać!
+
+{% include video.html id="Oz9m8sKCNsU" %}
+
+{% include video.html id="68Eli0AC9Lk" %}
+
+{% include video.html id="8XEt1YPhiIw" %}
+
+## Materiały
+
+Kolorowe kartki (najlepiej z bloku technicznego, format A5 lub A4), bibuła, cekiny, kredki, farby, pędzle, flamastry, klej.
