--- a/_posts/2023-12-20-231220.md
+++ b/_posts/2023-12-20-231220.md
@@ -1,17 +1,25 @@
-# Jak to było z Waszymi narodzinami...
+# Przygotowanie kartek świątecznych
 
-Już za kilka dni, w Wigilię Bożego Narodzenia, będziemy obchodzić pamiątkę narodzin Jezusa, który tak samo jak każdy z nas, pewnego dnia przyszedł na świat.
+Dzisiejsze zadanie, to wykonanie kartek świątecznych dla najbliższych, rodziny, przyjaciół, znajomych. Ale halo, halo, czy ktoś jeszcze wysyła takie kartki? Czy nasze dzieci wiedzą, jak adresuje się kopertę/kartkę pocztową?
 
-Już prawie kończy się Adwent, podczas którego przygotowaliśmy się na Jego przyjście, podobnie jak rodzice przygotowują się na narodziny swojego dziecka.
+Cóż, odpowiedzi mogą być różne, ale uwaga – nasze kartki świąteczne nie muszą zostać koniecznie wysłane pocztą. Takie kartki wypełnione serdecznymi życzeniami, można oczywiście tradycyjnie wysłać pocztą, ale dobrym pomysłem może być również wręczenie ich podczas świąt. Kto wie, może warto zanieść taką kartkę sąsiadom?
 
-Przypomnijmy zatem naszym dzieciom ten czas i opowiedzmy rodzinną historię.
+![Zdjęcie](/img/2021-12-04.jpg)
 
-Dzieci uwielbiają słuchać historii o tym, jak były kiedyś w brzuchu, jak się urodziły i jak miały niewiele więcej niż 50 cm długości. Wspólne wspominanie okresu ciąży i pierwszych chwil dziecka pomaga uświadomić sobie, jak cennym darem jest życie, a także spojrzeć na nasze dzieci, które być może nie przypominają już tych małych bobasków z pierwszych dni swojego życia, z tą samą miłością i nadzieją, jak przed laty.
+## Grunt to własnoręcznie zrobiona kartka!
 
-Podziękujmy dziś wspólnie Bogu za cud narodzin, którego my wszyscy byliśmy kiedyś udziałem.
+Wykonana własnoręcznie kartka z odręcznie wypisanymi życzeniami, to dziś, w świecie smsów i różnych social mediów, prawdziwy rarytas. Zapraszamy Was do rodzinnego wykonania takich kartek. Warto najpierw przygotować listę osób, które chcecie takim prezentem obdarować a następnie przygotować kartki.
 
-![Zdjęcie](/img/2020-12-24.jpg)
+## Inspiracje na kartki świąteczne
 
-## Co przygotować?
+Poniżej zamieściliśmy filmiki z wieloma kartkowymi inspiracjami, mogą się przydać!
 
-Zdjęcia z okresu ciąży, porodu i pierwszych dni życia dzieciaków.
+{% include video.html id="Oz9m8sKCNsU" %}
+
+{% include video.html id="68Eli0AC9Lk" %}
+
+{% include video.html id="8XEt1YPhiIw" %}
+
+## Materiały
+
+Kolorowe kartki (najlepiej z bloku technicznego, format A5 lub A4), bibuła, cekiny, kredki, farby, pędzle, flamastry, klej.
