wieniec i jan i readme

--- a/_posts/2023-12-10-231210.md
+++ b/_posts/2023-12-10-231210.md
@@ -19,4 +19,4 @@ Lampion lub latarka, którą można zapalić i zostawić na pewien czas w różn
 
 Zachęcamy do zapalenia kolejnej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
 
-![Wieniec](/img/adwent-2.jpg)
+![Wieniec](/img/wieniec-2.jpg)
