--- a/_posts/2023-12-11-231211.md
+++ b/_posts/2023-12-11-231211.md
@@ -1,55 +1,26 @@
-# Poznajemy Jana Chrzciciela
+# Podejmij wyzwanie Jana Chrzciciela
 
-Znacie historię tego człowieka, który całe życie spędził “w cieniu” sławnego kuzyna (Jezusa)? Czy nam łatwo zająć ostatnie miejsce przy stole? Żyć “w cieniu”?
+Na dwa tygodnie przed Narodzinami Jezusa zachęcamy do poznania nieco bliżej jego starszego kuzyna – Jana.
 
-![Zdjęcie](/img/2021-12-13.jpg)
+![Jan Chrzciciel](/img/jan.jpg)
+*Jan Chrzciciel i Jezus Chrystus - kadr z filmu "Chosen"*
 
-## Opowiedzcie dzieciom historię Jana Chrzciciela
+## Historia Jana Chrzciciela
 
-Elżbieta pochodziła z rodu Aarona, a jej mąż Zachariasz był kapłanem. Oboje byli już w podeszłym wieku i modlili się o potomstwo, bo dla Boga nie ma nic niemożliwego. 
-
-Archanioł Gabriel ukazał się Zachariaszowi i powiedział:
-
-> “Żona twoja, Elżbieta, porodzi ci syna i dasz mu imię Jan i stanie się on dla ciebie radością i weselem, bo będzie wielkim przed Panem. Wina i innych podobnych napojów pić nie będzie. Duch Święty go napełni, a wielu synów izraelskich nawróci do Boga." (Łk 1, 13-16)
-
-Zachariasz niedowierzał Aniołowi, wskutek czego przestał mówić.
-
-Kiedy Elżbieta była w szóstym miesiącu ciąży, odwiedziła ją Maryja. Elżbieta pierwsza rozpoznała swoją kuzynkę jako przyszłą matkę Jezusa, Zbawiciela. Na jej widok powiedziała:
-
-> “Błogosławiona jesteś między niewiastami i błogosławiony jest owoc Twojego łona. A skądże mi to, że Matka mojego Pana przychodzi do mnie? (Łk 1, 42-43)
-
-Maryja pozostała u Elżbiety, pomagając jej aż do czasu rozwiązania. Dokładnie pół roku przed Jezusem na świat przyszedł Jan.
-
-Niedługo później Herod wydał rozkaz zamordowania wszystkich chłopców w Betlejem do lat dwóch. Elżbieta ukryła się z synem w górach. Zachariasz został zamordowany przez żołnierzy Heroda, nie chciał wyjawić miejsca pobytu rodziny. Elżbieta zmarła niedługo po mężu. 
-
-Jan został sierotą, uciekł na pustynię, wyrzekł się stanu kapłańskiego po swoim ojcu i żył w ubóstwie. “Żywił się miodem i szarańczą”. Był pustelnikiem, zgłębiał modlitwę. 
-
-Po ukończeniu 30 lat zaczął nauczać o przyjściu Jezusa, głosił Ewangelię i udzielał chrztu nawrócenia. Niektórzy jego uczniowie zostali apostołami Jezusa. Jan chrzcił w wodach Jordanu, przychodzili do niego mieszkańcy Jerozolimy, Judei i okolic. Był bardzo znanym prorokiem, który wskazywał na Jezusa, żył w jego czasach i dawał o nim świadectwo.
-
-Jan Chrzciciel doskonale rozumiał swoje posłannictwo:
-
-> ”Ja was chrzczę wodą dla nawrócenia; lecz Ten, który idzie za mną, mocniejszy jest ode mnie; ja nie jestem godzien nosić Mu sandałów. On was chrzcić będzie Duchem Świętym i ogniem” (Mt 3, 11)
-
-Jan przedstawiał Jezusa jako Baranka Bożego, który gładzi grzechy świata, czyli całe zło oddzielające nas od Boga. 
-
-Pewnego dnia przyszedł do Jana Jezus i poprosił o chrzest! Kiedy Jezus wyszedł z Jordanu po chrzcie, głos z Nieba rozległ się i oznajmił:
-
-> “On jest moim Synem umiłowanym, którego sobie upodobałem”. (Mt 3, 17)
-
-Po chrzcie Jezus udał się na pustynię, gdzie był poddany kuszeniu przez diabła.
-
-Jan trafił do więzienia za to, że wypominał publicznie haniebne czyny tetrarchy Heroda.Ostatnie dni przed okrutną śmiercią, Jan spędził w więzieniu, gdzie doświadczył próby wiary. 
-
-Jezus dowiedziawszy się o wątpliwościach Jana, błogosławił go, mówiąc, “Szczęśliwy jest ten, kto we Mnie nie wątpi”. “Nie ma większego człowieka od Jana Chrzciciela”.
+Jan, syn Elżbiety i Zachariasza, przyszedł na świat 6 miesięcy przed Jezusem i najbardziej znany jest z tego, że był ostatnim prorokiem zapowiadającym przyjście Zbawiciela oraz tym, który ochrzcił go w Jordanie, przez co wspominamy go dziś pod imieniem św. Jan Chrziciel.
  
-Jan został ścięty.
+Mniej znanym faktem z życia Jana jest to, że był on nazirejczykiem, czyli złożył przed Bogiem śluby nazireatu, które polegały na wyrzeczeniu się:
 
-Po śmierci Jana, Jezus dokonał cudu rozmnożenia chleba i ryb, aby wykarmić cały lud, który za Nim poszedł.
+- Picia wina, sycery (lekkiego napoju alkoholowego z daktyli) i spożywania winogron
+- Obcinania włosów na głowie
+- Zbliżania się do zwłok – nawet jeśli zmarłymi byli matka lub ojciec.
+ 
+Celem tych wyrzeczeń było jeszcze głębsze oddanie się Bogu poprzez umartwienie i rezygnację z przyjemności. Dzięki temu Jan otwierał swoje serce i umysł na słowa Boga.
 
-Jan Chrzciciel przypomina nam, że  nie ma innego zbawienia niż przez Jezusa.
+## Pójdź śladami Jana Chrzciciela - wyrzecz się czegoś na 2 tygodnie!
 
-- Modląc się - rozmawiajmy z Jezusem.
-- Idąc do kościoła - idźmy na spotkanie z Jezusem.
-- Spowiadając się - prośmy o przebaczenie, tak jak Jezus prosił o chrzest Jana, aby zacząć przełom w życiu na ziemi.
+I dziś zapraszamy Cię do pójścia w ślady Jana i wyrzeczenia się jakiejś przyjemności do dnia Bożego Narodzenia, czyli na niecałe 2 tygodnie – może to być coś związanego z żywnością, np. słodycze, fast-foody, napoje słodkie albo z urządzeniami cyfrowymi, np. odstawienie lub mediów społecznościowych lub coś innego, co jest dla Ciebie przyjemne.
+ 
+A gdy miną dwa tygodnie, zastanów się wówczas, w jaki sposób takie ślubowanie Ci pomogło.
 
-W innych ludziach dostrzegajmy oblicze Jezusa.
+Powodzenia!
