--- a/_posts/2023-12-17-231217.md
+++ b/_posts/2023-12-17-231217.md
@@ -24,4 +24,4 @@ Trzecia niedziela adwentu jest niedzielą radości, więc tym bardziej zachęcam
 
 Zachęcamy do zapalenia trzeciej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
 
-![Wieniec](/img/adwent-3.jpg)
+![Wieniec](/img/wieniec-3.jpg)
