--- a/_posts/2023-12-24-231224.md
+++ b/_posts/2023-12-24-231224.md
@@ -6,8 +6,10 @@ Dzisiaj ostatnia niedziela adwentu a jednocześnie Wigilia Bożego Narodzenia!
 
 Zapukaj do sąsiadów na piętrze lub w domu obok i złóż im serdeczne życzenia!
 
+![Sąsiedzi](/img/sasiedzi.jpg)
+
 ## Czwarta niedziela adwentu - dziękujemy za wspólne przeżywanie tego czasu!
 
 Zachęcamy do zapalenia czwartej świeczki w Waszym [wieńcu adwentowym](/wieniec/).
 
-![Wieniec](/img/adwent-4.jpg)
+![Wieniec](/img/wieniec-4.jpg)
