--- a/_posts/2024-12-01-241201.md
+++ b/_posts/2024-12-01-241201.md
@@ -2,7 +2,7 @@
 
 Dzisiaj rozpoczyna się Adwent. Zapraszamy do zainaugurowania tego szczególnego czasu wspólną kolacją przy świecach.
 
-![Kolacja](/img/2022-11-27.jpg)
+![Kolacja](/img/swiece-rodzina.jpg)
 
 Jesteśmy zabiegani, często mijamy się z najbliższymi i nie mamy dla siebie czasu. Kolacja jest dobrą okazją do spotkania się w gronie rodzinnym, porozmawiania. To nie musi być wyszukana kolacja z wieloma daniami. 
 
