all activities done!

--- a/_posts/2024-12-05-241205.md
+++ b/_posts/2024-12-05-241205.md
@@ -6,7 +6,7 @@ Znajdźcie w ciągu dnia czas, kiedy nie będziecie się spieszyć. Wyciągnijci
 
 Zobaczcie wspólną drogę, jaką przeszliście. Popatrzcie na wszystkie zmiany, jakie miały miejsce… To jest miejsce i czas aby dać się dotknąć prawdziwej radości.
 
-![Zdjęcie](/img/2020-12-07.jpg)
+![Zdjęcia rodzinne](/img/rodzina.jpg)
 
 ## Wybierzcie najlepsze zdjęcia z ostatnich dwóch lat
 
