--- a/_posts/2024-12-07-241207.md
+++ b/_posts/2024-12-07-241207.md
@@ -2,14 +2,18 @@
 
 Nadszedł kolejny piątek. Piątkowy wieczór to dla wielu ludzi początek weekendu. Proponujemy spędzić go oglądając wspólnie film. 
 
-W dzisiejszych czasach mamy dostęp do wielu filmów, więc spróbujcie znaleźć taki, który ma szansę spodobać się wszystkim. Wiemy, że to niełatwe, szczególnie, gdy ma się dzieci w różnym wieku lub bardzo odmienne upodobania. Zachęcamy do wspólnego podjęcia decyzji, jeżeli to możliwe. Dobrze się sprawdzają filmy zabawne, przy których można się wspólnie pośmiać.
+## Co oglądać rodzinnie?
+
+W dzisiejszych czasach mamy dostęp do wielu filmów, więc spróbujcie znaleźć taki, który ma szansę spodobać się wszystkim. Wiemy, że to niełatwe, szczególnie, gdy ma się dzieci w różnym wieku lub bardzo odmienne upodobania. Zachęcamy do wspólnego podjęcia decyzji, jeżeli to możliwe. Dobrze się sprawdzają filmy zabawne, przy których można się wspólnie pośmiać. Jeśli macie dostęp do platformy Disney+, tam jest wiele fajnych filmów dla całej rodziny.
+
+Michał z naszej wspólnoty szczególnie poleca nowoczesną adaptację "Opowieści wigilijnej" Dickensa, czyli film [Family Man](https://www.filmweb.pl/film/Family+Man-2000-10344) ze słynnym aktorem, Nicholasem Cage.
+
+![Zdjęcie](/img/film.jpg)
 
 Wspólne oglądanie filmu, śledzenie losów bohaterów, przeżywanie ich historii, obserwowanie różnych sytuacji i zachowań to znakomita okazja do rozmowy, wymiany poglądów, dzielenia się emocjami i po prostu bycia razem. Tak mile spędzony czas przyczynia się do budowy więzi rodzinnych i tworzenia dobrych, wspólnych wspomnień.
 
-![Zdjęcie](/img/2020-12-18.jpg)
-
-Warto zrobić zdjęcie, aby ten moment upamiętnić. 
+> Warto zrobić zdjęcie, aby ten moment upamiętnić. 
 
 Włóżcie wygodne ubrania, wybierzcie film i zróbcie popcorn lub inną, najlepiej zdrową przekąskę. 
 
-Miłego oglądania!
+Miłego oglądania! 🍿
