--- a/_posts/2024-12-25-241225.md
+++ b/_posts/2024-12-25-241225.md
@@ -4,13 +4,13 @@ Za nami cztery tygodnie rodzinnej adwentowej drogi. Taki wysiłek warto uczcić 
 
 Idealnym dopełnieniem stołu pełnego smakołyków, prezentów i wolnego czasu będzie uczczenie Urodzin Jezusa rodzinnym odśpiewaniem kolęd i pastorałek.
 
-[W ich bogatym zbiorze](http://spiewnikreligijny.pl/koledy-i-pastoralki){:target='_blank'} każdy znajdzie coś dla siebie: radosne “Przybieżeli do Betlejem”, podniosłe “Bóg się rodzi”, kołysankowe “Lulajże Jezuniu”, energiczne “Gore Gwiazda Jezusowi”, poetycką “Cichą noc” czy przejmującą “Kolędę Maryi”.
+Każdy znajdzie coś dla siebie: radosne “Przybieżeli do Betlejem”, podniosłe “Bóg się rodzi”, kołysankowe “Lulajże Jezuniu”, energiczne “Gore Gwiazda Jezusowi”, poetycką “Cichą noc” czy przejmującą “Kolędę Maryi”.
 
 I nie poddawajcie się myśli, że nie potraficie śpiewać - większość kolęd jest na tyle znana i na tyle przyjemna dla ucha, że przy odrobinie dobrej woli, wspólnie odnajdziecie właściwą nutę ;)
 
 > Wesołych i Rodzinnych Świąt Bożego Narodzenia!
 
-![Zdjęcie](/img/2021-12-25.jpg)
+{% include video.html id="WMz3oQvJfKE" name="Najpiękniejsze Polskie Kolędy" %}
 
 ## Co przygotować?
 
