--- a/_posts/2024-12-07-241207.md
+++ b/_posts/2024-12-07-241207.md
@@ -1,6 +1,6 @@
 # Rodzinny wieczór filmowy
 
-Nadszedł kolejny piątek. Piątkowy wieczór to dla wielu ludzi początek weekendu. Proponujemy spędzić go oglądając wspólnie film. 
+W pierwszy dzień weekendu proponujemy spędzić oglądając wspólnie film. 
 
 ## Co oglądać rodzinnie?
 
