--- a/_posts/2025-12-05-251205.md
+++ b/_posts/2025-12-05-251205.md
@@ -1,6 +1,6 @@
 # Rodzinny wieczór filmowy
 
-W pierwszy dzień weekendu proponujemy spędzić oglądając wspólnie film. 
+Dzisiaj proponujemy spędzić wieczór oglądając wspólnie film. 
 
 ## Co oglądać rodzinnie?
 
