--- a/_posts/2025-12-19-251219.md
+++ b/_posts/2025-12-19-251219.md
@@ -6,6 +6,10 @@ Zobaczmy, czy jesteśmy w stanie podarować sobie nawzajem ten czas w 100%?
  
 ![Bez telefonów](/img/2021-12-18.jpg)
 
+## Jak zapanować nad telefonami w rodzinie?
+
+Sporo ciekawych materiałów o tym, jak mądrze wprowadzać dzieci w świat telefonii możecie znaleźć na [Ojcowskiej Stronie Mocy](https://www.ojcowskastronamocy.pl)
+
 A może warto do końca Adwentu podjąć jakiś smartfonowy post? To tylko parę dni. Propozycje:
 
 - nie korzystać z telefonu przy dzieciach (poza odbieraniem połączeń przychodzących)
